# fast5

./: .gitignore  Makefile.am  Makefile.in  MinION2_20160922_FNFAB39075_MN16454_mux_scan_Chip97_Human_R9_4_tune_89619_ch71_read32_strand.fast5  MinION2_20160922_FNFAB39075_MN16454_sequencing_run_Chip97_Human_R9_4_tune_18272_ch165_read206_strand1.fast5  MinION2_20160922_FNFAB39075_MN16454_sequencing_run_Chip97_Human_R9_4_tune_84888_ch434_read1121_strand.fast5  MinION2_20160922_FNFAB39075_MN16454_sequencing_run_Chip97_Human_R9_4_tune_90128_ch47_read41_strand.fast5  README.md  config.h.in  configure  configure.ac  test.fast5
autom4te.cache/: output.0  requests  traces.0  traces.1
include/: debug.h  fast5.h  vcd.h
src/: f5dump.c  f5vcd.c  fast5-i.h  fast5.c  vcd.c
